# imageproc-website-leptos

./: .gitignore  Cargo.toml  README.md  index.html  next-algorithms.md  package-lock.json  package.json  tailwind.config.js  worker.js
css/: main.css
proc/: Cargo.toml
src/: app_state.rs  effects.rs  event_handlers.rs  lib.rs  main.rs  views.rs
src/algorithms/: algorithms.rs  lib.rs
src/components/: algorithm_selection.rs  mod.rs  navbar.rs
