[package]
name = "image_proc_website_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"
path = "src/algorithms/lib.rs"

[[bin]]
name = "worker"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
log = "0.4.21"
wasm-logger = "0.2.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
image_processing = { git = "https://github.com/arthmis/image-processing.git" }
image = "0.23.11"
leptos-use = "0.10.10"

[dependencies.web-sys]
version = "0.3"
features = [
    "Node",
    "HtmlInputElement",
    "Element",
    "File",
    "FileList",
    "HtmlImageElement",
    "ImageData",
    "CanvasRenderingContext2d",
    "OffscreenCanvasRenderingContext2d",
    "MessageEvent",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    'Worker',
    "WorkerOptions",
    "WorkerType",
    "DedicatedWorkerGlobalScope",
    "Window",
    "MediaQueryList",
    "MediaQueryListEvent",
    "EventTarget",
]
